# projectZ

./: README.md
android_client/: build.gradle  settings.gradle
android_client/app/: build.gradle
android_client/gradle/wrapper/: gradle-wrapper.properties
esp32/: README.md  esp32.ino  my_module.cpp  my_module.h  my_mqtt.cpp  my_mqtt.h
front/: index.html
front/assets/: arco.ea015dc6.js  chart.1c717195.js  default-layout.8eb210f0.js  default-layout.e17f1203.css  index.270778e3.js  index.278d97c4.js  index.2c3ea63b.js  index.517cad65.js  index.cabbaea5.css  index.e73a33df.js  index.e80c7104.css  index.f8060a41.css  vue.198ed283.js
iot/esp32/: my_mqtt.h
iot/raspberry/: go.mod  go.sum  main.go
iot/raspberry/auth/: ca.crt  client.pem
iot/raspberry/script/: raspberry.py
raspberry/: README.md  go.mod  go.sum  main.go
raspberry/internal/pi/: config.go  operate.go  parking.go  parkingMgr.go
raspberry/internal/transmission/: config.go  (+3 more)
raspberry/script/: raspberry.py
server/: README.md  go.mod  go.sum  main.go
server/auth/: server.key
server/parking_server/: README.md  go.mod  go.sum  main.go
server/pbfile/: service.proto
server/user_server/: README.md  go.mod  go.sum  main.go  sql_cmd
server/web_server/: README.md  go.mod  go.sum  main.go
windows_client/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  main.cpp  parking_space.cpp  parking_space.h  widget.cpp  widget.h  windows_client.pro  windows_client_zh_CN.ts
windows_client/pbfile/: service.grpc.pb.cc  service.grpc.pb.h  service.pb.cc  service.pb.h
windows_client/projectZ/: projectZ.pro  projectZ_zh_CN.ts
(+89 files in other folders)
